public/stylesheets/style.css
.greeting {
	margin-top: 2rem;
	font-family: "Poppins"
	/* "Lucida Console", "Courier New", monospace; */
  }

/* linkedin and github links style*/
a{
	color: white !important;
	padding: .2rem 4rem !important; /* needs a fix for mobile*/
	margin-left: auto !important;
	margin-right: auto !important;
}

/* github logo size */
.github {
	font-size: small;
}

/* centering the names */
.name {
	text-align: center !important;
	margin-bottom: 1rem;
	font-family: 'Poppins';
}
 
/* profile pictures style */
.profile-pic {
	border: 3px solid #ddd; /* Gray border */
	width: 125px; /* Set a small width */
	display: block;
	margin-left: auto;
	margin-right: auto;
	border-radius: 100%;
	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
  }
 
  /* logo signs */
  .logo {
	width: 50px; /* Set a small width */
	margin-left: 1rem;
	margin-right: 1rem;
	padding-top: 1rem;
	padding-bottom: 1rem;
  }

/* style of copyright */
.copyright {
	padding: 10px;
	background: rgb(46, 45, 45);

	font-size: small;
	font-family:'Poppins';
  }




.form-group {
	font-family: 'Poppins';
  }
  
  body {
	background-color: #000000;
	background-image: linear-gradient(147deg, #000000 0%, #2c3e50 74%);
	background-repeat: no-repeat;
  }
  
  #sliderscreen {
	height: 100vh;
	align-content: center !important;
  }
  
  .card-team {
	padding-top: 30px;
  }
  
  #maxButton {
	max-width: 400px;
	
  }
  
  #background-hack {
	background-color: #000000;
	background-image: linear-gradient(147deg, #000000 0%, #2c3e50 74%);
	background-repeat: no-repeat;
	height: 100vh;
  }
  
  .form-label {
	font-family: 'Poppins';
	font-size: small;
	color: white;
	text-shadow: 1px 1px #2b2929;
  }
  
  #random-name {
	font-family: 'Staatliches';
	font-size: 2rem;
	flex-wrap: nowrap;
	color: white;
	margin-top: 2vh;
	text-align: center;
  }
  
  #namesaved {
	font-family: 'Staatliches';
	font-size: 2.4rem;
	flex-wrap: nowrap;
	color: white;
	text-align: center;
  }
  
  #random-name-div {
	justify-items: baseline;
  }
  
  #draftheader {
	font-weight: 800;
	text-align: center;
	font-family: 'Poppins';
	text-shadow: 3px 2px #2b2929;
  }
  
  #sign-up {
	font-family: 'Poppins';
	text-align: center;
  
  }
  
  .browse_text {
	font-family: 'Poppins';
  }
  
  #welcome {
	text-align: center;
	text-shadow: 2px 2px #0b0a0a;
  }
  
  #team-logo {
	height: 10vh;
	object-fit: scale-down;
  }
  
  .text-light {
	text-shadow: 1px 1px #2b2929;
	font-family: 'Poppins';
  }
  
  #create-team {
	max-width: 800px;
  }
  
  .carousel-container {
	position: relative;
	max-width: 800px;
	align-content: center;
	min-height: 15vh;
  }
  
  .carousel-item img {
	object-fit: scale-down;
	max-height: 30vh;
  }
  
  #carousel-thumbs {
	background: rgba(255, 255, 255, .3);
margin-top: 35px;
	padding: 0 50px;
  }
  
  #carousel-thumbs img {
	border: 5px solid transparent;
	cursor: pointer;
  }
  
  #carousel-thumbs img:hover {
	border-color: rgba(255, 255, 255, .3);
	border-radius: 100%;
  }
  
  #carousel-thumbs .selected img {
	border-color: rgb(239, 245, 243);
	border-width: 3px;
	border-radius: 100%;
  }
  
  .carousel-control-prev-icon,
  .carousel-control-next-icon {
	height: 100px;
	width: 100px;
	outline: rgb(140, 137, 137);
	background-size: 100%, 100%;
	border-radius: 50%;
	border: 1px solid rgb(156, 152, 152);
	background-image: none;
  }
  
	/* #carousel-thumbs .selected img {
	  border-color: rgb(39, 228, 156);
	  border-width: 3px;
	  border-radius: 85%;
	} */
  
  .draft-header {
	height: 10vh;
	max-width: 10vh;
	position: absolute;
	left: 0px;
	top: 0px;
  }
  
  #draft-clear,
  #draft-team {
	font-family: 'Poppins', sans-serif;
	font-weight: 500;
	font-size: medium;
	width: 300px;
	height: 80px;
  }
  
  .form-group {
	font-size: medium;
  }
  
  #heroHeadline {
	max-width: 10vh;
  }
  
  .navbar-brand {
	font-family: 'Poppins', sans-serif;
	font-size: x-large !important;
	font-weight: 600;
  }
  
  body {
	font-size: medium;
  }
  
  .signupbtn {
	min-width: 50px !important;
	font-size: large !important;
  }
  
  .card-title {
	font-family: 'Poppins', sans-serif;
	font-weight: 700;
	font-size: medium;
	align-self: center !important;
	width: 16rem;
  }
  
  .card-body {
	width: 16rem;
  }
  
  .btnDraft {
	color: #faf8f8;
	align-self: center;
	background-color: rgb(14, 54, 107);
	border-color: rgb(31, 4, 130);
	border-width: 1px;
	font-family: 'Poppins', sans-serif;
	font-size: 1rem;
	border-radius: 5px;
  }

  .choice {
    margin-top: .5rem !important;
  }
  
  .btnDraft:hover,
  .btnDraft:active,
  .btnDraft:focus,
  .btnDraft.active {
	background-color:
	  rgb(14, 54, 107);
	color: #ffffff;
	border-color: rgb(14, 54, 107);
  }
  
  .card-img-top {
	width: 40% !important;
	align-self: center;
	margin-top: 10px;
	width: 12rem;
  }
  
  .nav-item {
	font-family: 'Poppins', sans-serif;
	font-size: large;
	font-weight: 500;
  }
  
  .btn-outline-light {
	font-family: 'Poppins', sans-serif;
	font-size: large !important;
	font-weight: 500;
	margin-left: 10px;
  }
  
  #logoIcon {
	padding-left: 20px !important;
	max-width: 50px !important;
	max-height: 50px;
  }
  
  .bg-image {
	background-image: url('https://res.cloudinary.com/actionfdfds/image/upload/v1621014519/newbackground_bfbjoz.png');
	background: 50% no-repeat;
	background-size: cover;
	height: 100vh;
	text-align: center;
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
	-webkit-align-items: center;
	-ms-flex-align: center;
	align-items: center;
	-webkit-justify-content: center;
	-ms-flex-pack: center;
	justify-content: center;
  }
  
  .progress {
	margin-bottom: 3px;
	margin: 4px;
  }
  
  .card {
	margin-bottom: 10px;
	margin-top: 10px;
	margin-left: 10px;
	margin-right: 10px;
	padding-bottom: 10px;
	padding-top: 10px;
	padding-left: 10px;
	padding-right: 10px;
	width: 16rem !important;
	align-items: center;
	border-radius: 10px;
	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  }
  
  .progress-title {
	font-size: 20px;
	font-weight: 700;
	color: #333;
	text-transform: uppercase;
	margin: 0 0 25px;
  }
  
  .progress {
	height: 20px !important;
	background: #e9e9ea;
	border-radius: 15px;
	margin-bottom: 30px;
	overflow: visible;
	position: relative;
  }
  
  .progress .progress-bar {
	box-shadow: none;
	border: none;
	border-radius: 15px;
	position: relative;
	-webkit-animation: animate-positive 1s;
	animation: animate-positive 1s;
  }
  
  .progress .progress-value {
	width: 14rem;
	height: 35px;
	line-height: 27px;
	border-radius: 20px;
	background: #fff;
	font-size: 17px;
	font-weight: 600;
	position: absolute;
	top: -12px;
	right: 0;
	z-index: 2;
  }

